--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "build": "rsbuild build",
-    "dev": "rsbuild dev --open",
+    "dev": "export NODE_NO_WARNINGS=1 && rsbuild dev --open",
     "preview": "rsbuild preview"
   },
   "dependencies": {
@@ -13,11 +13,17 @@
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "@rsbuild/core": "^1.3.22",
+    "@rsbuild/core": "^1.4.0-rc.0",
     "@rsbuild/plugin-react": "^1.3.2",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "typescript": "^5.8.3"
   },
-  "packageManager": "pnpm@10.12.1+sha512.f0dda8580f0ee9481c5c79a1d927b9164f2c478e90992ad268bbb2465a736984391d6333d2c327913578b2804af33474ca554ba29c04a8b13060a717675ae3ac"
+  "pnpm": {
+    "supportedArchitectures": {
+      "cpu": [
+        "wasm32"
+      ]
+    }
+  }
 }
