--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "@rsbuild/core": "^1.4.0",
-    "@rsbuild/plugin-react": "^1.3.2",
+    "@rsbuild/core": "latest",
+    "@rsbuild/plugin-react": "latest",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "typescript": "^5.8.3"
