--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "preview": "export NODE_NO_WARNINGS=1 && rsbuild preview"
   },
   "dependencies": {
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
-    "@rsbuild/core": "latest",
-    "@rsbuild/plugin-react": "latest",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "typescript": "^5.8.3"
+    "@rsbuild/core": "^1.4.14",
+    "@rsbuild/plugin-react": "^1.3.5",
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
+    "typescript": "^5.9.2"
   },
   "pnpm": {
     "supportedArchitectures": {
